force-app/main/default/objects/OperationCheck__c/OperationCheck__c.object-meta.xml
<CustomObject>
    <label>更新チェック</label>
    <nameField>
        <displayFormat>OC-{000000000}</displayFormat>
        <label>業務チェック名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>