force-app/main/default/objects/OperationCheck__c/fields/CheckCategory__c.field-meta.xml
<CustomField>
    <fullName>CheckCategory__c</fullName>
    <label>チェック区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CheckCategory</valueSetName>
    </valueSet>
</CustomField>