force-app/main/default/objects/OperationCheck__c/fields/CheckResultComment__c.field-meta.xml
<CustomField>
    <fullName>CheckResultComment__c</fullName>
    <label>チェック結果コメント</label>
    <type>TextArea</type>
</CustomField>