force-app/main/default/objects/OperationCheck__c/fields/OperationCheckId__c.field-meta.xml
<CustomField>
    <fullName>OperationCheckId__c</fullName>
    <externalId>true</externalId>
    <label>業務チェックID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>