force-app/main/default/objects/OperationCheck__c/fields/OperationCheckMasterId__c.field-meta.xml
<CustomField>
    <fullName>OperationCheckMasterId__c</fullName>
    <label>業務チェックマスタIｄ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>