force-app/main/default/objects/OperationCheck__c/fields/RegulationFieldsName__c.field-meta.xml
<CustomField>
    <fullName>RegulationFieldsName__c</fullName>
    <label>規定項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>