force-app/main/default/objects/OperationCheck__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <label>更新</label>
    <referenceTo>Renewal__c</referenceTo>
    <relationshipLabel>更新チェック</relationshipLabel>
    <relationshipName>RenewalOperationCheck</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>