force-app/main/default/objects/OperationCheck__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CheckFieldsName__c</columns>
    <columns>CheckFieldsValue__c</columns>
    <columns>CheckResultComment__c</columns>
    <columns>CheckResult__c</columns>
    <columns>RegulationFieldsValue__c</columns>
    <columns>RegulationFieldsName__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>